[package]
name = "rustbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi","tlhelp32","winerror","winreg","wininet","winuser","synchapi","sysinfoapi","fileapi"] }